--- a/talks_and_papers/qp_paper/papineau_qp1.tex
+++ b/talks_and_papers/qp_paper/papineau_qp1.tex
@@ -7,6 +7,7 @@
 \usepackage{multicol}
 \usepackage{blindtext}
 \usepackage{tablefootnote}
+\usepackage{hyperref}
 \usepackage{tipa}
 \usepackage[style=apa]{biblatex}
 \DeclareNameAlias{sortname}{family-given}
@@ -103,7 +104,7 @@
 	
 	\begin{figure}[ht!]
 		\centering
-		\includegraphics[scale=0.115]{prod_neutral_poli_box.png}
+		\includegraphics[scale=0.115]{prod_neutral_poli_bar_nonmean.png}
 		\caption{Proportion of response genders by political party, faceted by gender of name in vignette seen.}
 		\label{prod-box}
 	\end{figure}
@@ -112,7 +113,7 @@
 	
 		\begin{figure}[ht!]
 		\centering
-		\includegraphics[scale=0.115]{prod_neutral_poli_box_gender.png}
+		\includegraphics[scale=0.115]{prod_neutral_gender_bar_nonmean.png}
 		\caption{Average proportion of neutral responses as a function of gender ideology, faceted by political alignment.}
 		\label{prod-neutral-poli-box-gender}
 	\end{figure}
@@ -136,6 +137,7 @@
 	\section{Acknowledgments}
 	
 	\section{Supplementary Material}
+		Supplementary materials, including details related to the norming study and unreported processing studies, can be found at \url{https://branpap.com/qp1-supplementary-materials}.
 		
 	\nocite{labov1963social}
 	\printbibliography
